# apoteka_plus_plus

./: .gitignore  README.md
 API Gateway/: app.py
 API Gateway/decorators/: auth.py
 API Gateway/routes/: __init__.py  email.py  init.py  order.py  product.py  report.py  review.py  user.py
 API Gateway/services/: email.py  order.py  product.py  report.py  review.py  user.py
 API Gateway/shared/: request_helper.py  response_helper.py
EmailService/: .env  app.py
EmailService/routes/: email.py
EmailService/service/: email.py  response_helper.py
OrderService/: .env  Cargo.toml
OrderService/controllers/src/: delivery_request.rs  lib.rs  order.rs  order_item.rs
OrderService/models/: Cargo.toml
OrderService/models/src/: delivery_request.rs  lib.rs  order.rs  product.rs  schema.rs
OrderService/repositories/: Cargo.toml
OrderService/repositories/src/: delivery_request.rs  lib.rs  order.rs  (+1 more)
OrderService/services/: Cargo.toml
OrderService/services/src/: lib.rs
OrderService/services/src/delivery_request/: change.rs  create.rs  delete.rs  mod.rs  read.rs
OrderService/services/src/order/: change.rs  create.rs  delete.rs  mod.rs  read.rs
OrderService/services/src/order_item/: change.rs  create.rs  delete.rs  mod.rs
OrderService/shared/: Cargo.toml
PharmacyFront/: README.md  angular.json  karma.conf.js  package-lock.json  package.json  proxy.conf.json
PharmacyFront/src/: styles.scss
ProductService/: .env  Cargo.toml
ProductService/application/: Cargo.toml
ProductService/infrastructure/: Cargo.toml
ProductService/models/: Cargo.toml
ProductService/repositories/: Cargo.toml
ProductService/services/: Cargo.toml
ReportService/: Cargo.toml
ReportService/application/: Cargo.toml
ReportService/controllers/: Cargo.toml
ReportService/controllers/src/: report_orders.rs
ReportService/models/: Cargo.toml
ReportService/services/: Cargo.toml
ReportService/services/src/: lib.rs  report_orders.rs
ReportService/shared/: Cargo.toml
ReviewService/: .env
ReviewService/controllers/: Cargo.toml
ReviewService/services/: Cargo.toml
UserService/: app.py  requirements.txt
UserService/decorators/: auth.py
UserService/model/: User.py
UserService/routes/: __init__.py  auth.py  user.py
UserService/services/: auth.py  response_helper.py  user.py
(+207 files in other folders)
