[package]
name = "controllers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
models = { path = "../models" }
services = { path = "../services" }
shared = { path = "../shared" }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde_json = "1.0.88"
rocket-validation = "0.1.0"
validator="*"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.5"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.5", features = ["full"] }